Restructure CQRS into Commands/Queries folders, MooBank style
